add uploadFile endpoint
TODO: had to disable swagger-express-middleware parseRequest as it intercepts/breaks form/multipart
